Fix secret inline link background in dark mode and use `spell-attack` instead of `spell` for spell attack rolls (#35)

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -2,6 +2,7 @@
 
 .theme-dark .pf2e--request-rolls {
     --visibility-gm-bg: var(--color-dark-6);
+    --blind-roll: var(--color-dark-6);
     --pf2e-rr--preview-bg-color: var(--color-dark-2);
     --pf2e-rr--preview-border-color: var(--color-dark-3);
     --pf2e-rr-results-bg-color: #b1b1b1;
